<resources>
    <string name="app_name">Friends Chat</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password"><font color="#FF6200EE">Forgot Password?</font></string>
    <string name="log_in"><b>LOG IN</b></string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="error_occurred">Some Error Occurred</string>
    <string name="empty_upass">Enter valid username/password</string>
    <string name="database_upload_success">Upload to database is Successful</string>
    <string name="upload_database_fail">Failed to upload image in database</string>
    <string name="forgot_email_sent">An email has been sent to you</string>
    <string name="update_user">Update User</string>
    <string name="image_load_failed">Load default Image Failed</string>
    <string name="load_image_success">Image Loaded Successfully</string>
    <string name="enter_your_message">Enter your message</string>
</resources>