<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/purple_200"
            app:title="LOG IN"
            app:expandedTitleGravity="right|bottom"
            app:expandedTitleTextColor="@color/white"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/login"
                android:scaleType="centerCrop"
                />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_username"
                    android:minEms="6"
                    android:maxEms="10"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/userNameWrapper"
                app:layout_constraintEnd_toEndOf="@id/userNameWrapper"
                app:layout_constraintTop_toBottomOf="@id/userNameWrapper"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_password"
                    android:minEms="8"
                    android:maxEms="12"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUp"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/passwordWrapper"
                app:layout_constraintTop_toBottomOf="@id/passwordWrapper"
                />

            <Button
                android:id="@+id/signIn"
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/passwordWrapper"
                app:layout_constraintTop_toTopOf="@id/signUp"
                />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp"
                android:layout_marginTop="50dp"
                android:textSize="22sp"
                app:layout_constraintHorizontal_bias="0.75"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>