<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/purple_200"
            app:title="@string/sign_up"
            app:expandedTitleGravity="top|start"
            app:expandedTitleTextColor="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/sign_up"
                android:scaleType="centerCrop"/>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userImage"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circular"
                app:srcCompat="@drawable/ic_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapperRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:minEms="15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userImage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapperRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/emailWrapperRegister"
                app:layout_constraintStart_toStartOf="@+id/emailWrapperRegister"
                app:layout_constraintTop_toBottomOf="@id/emailWrapperRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameWrapperRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/emailWrapperRegister"
                app:layout_constraintStart_toStartOf="@id/emailWrapperRegister"
                app:layout_constraintTop_toBottomOf="@id/passwordWrapperRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUpRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@id/userNameWrapperRegister"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="@id/userNameWrapperRegister"
                app:layout_constraintTop_toBottomOf="@id/userNameWrapperRegister" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>